moving to MMS CR3
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3605 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/jslee-sips-interop/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/pom.xml
@@ -29,7 +29,7 @@
 	</build>
 	
 	<properties>	
-		<mms.version>1.0.0.CR3-SNAPSHOT</mms.version>	
+		<mms.version>1.0.0.CR3</mms.version>	
 		<!-- dependency versions -->
 		<jboss.version>4.2.2.GA</jboss.version>
 		<javassist.version>3.6.0.GA</javassist.version>
