Removing embeddedjopr from the release because it increases the startup a bit too much. Will make it avalable as a downloadable standalone war to deploy
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3614 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -115,7 +115,7 @@
 		</antcall>
 		
 		<antcall target="build-mobicents-media-server" />
-		<antcall target="build-mobicents-jopr-plugin" />
+		<!--antcall target="build-mobicents-jopr-plugin" /-->
 		
 		<condition property="ha.capable">
 			<or>
