Remove dependecies out of release-in-node Fix references to SVN tags Fix to svn:properties
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3699 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -79,6 +79,10 @@
 					<property name="jboss.home" value="${jboss.home}"/>
 					<property name="jboss.config" value="@{jboss.config}"/>
 				</ant>
+				<ant dir="${base.path}" antfile="build.xml" target="build-mobicents-media-server">
+					<property name="jboss.home" value="${jboss.home}"/>
+					<property name="jboss.config" value="@{jboss.config}"/>
+				</ant>
 			</sequential>
 		</for>
 		
@@ -114,7 +118,6 @@
 			<param name="management.deploy.folder" value="${jboss.home}/server/${jboss.config}/deploy" />
 		</antcall>
 		
-		<antcall target="build-mobicents-media-server" />
 		<!--antcall target="build-mobicents-jopr-plugin" /-->
 		
 		<condition property="ha.capable">
