Updating to the latest sip balancer release
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3710 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -166,7 +166,7 @@
 		<dependency>
 			<groupId>org.mobicents.tools</groupId>
 			<artifactId>sip-balancer</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.BETA2</version>
 		</dependency>
 	</dependencies>
 	<build>
