--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -126,7 +126,7 @@
 		<dependency>
 			<groupId>org.mobicents.tools</groupId>
 			<artifactId>sip-balancer</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.BETA2</version>
 		</dependency>
 	</dependencies>
 	<build>
