--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>org.mobicents.resources</groupId>
 			<artifactId>tts-ratype</artifactId>
-			<version>1.2.0.CR2</version>
+			<version>1.2.2.GA</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
