--- a/sip-servlets-examples/conference-demo/pom.xml
+++ b/sip-servlets-examples/conference-demo/pom.xml
@@ -5,7 +5,7 @@
 		GWT-Maven example POM without google.webtoolkit.home SET (GWT as deps)
 	-->
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.mogicents.servlet.sip.examples</groupId>
+	<groupId>org.mobicents.servlet.sip.examples</groupId>
 	<artifactId>conference-demo</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
