updating some pom and classpath in preparation for the release
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3741 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/conference-demo/pom.xml
+++ b/sip-servlets-examples/conference-demo/pom.xml
@@ -4,6 +4,12 @@
 	<!--
 		GWT-Maven example POM without google.webtoolkit.home SET (GWT as deps)
 	-->
+	<parent>
+		<groupId>org.mobicents.servlet.sip.example</groupId>
+		<artifactId>sip-servlets-examples-parent</artifactId>
+		<version>1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mobicents.servlet.sip.examples</groupId>
 	<artifactId>conference-demo</artifactId>
