adding release tag location
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3757 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,10 @@
 		<artifactId>maven-release-plugin</artifactId>
 		<configuration>
 			<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+			<autoVersionSubmodules>true</autoVersionSubmodules>
+                       	<tagBase>
+                               	https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/
+                       	</tagBase>
 		</configuration>
 	</plugin>
 
