updating version number of the example
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3760 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/jslee-sips-interop/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>jslee-sips-interop-demo-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>JSLEE - SIPS Interoperability Demo Parent</name>
 	<url>http://www.mobicents.org/jslee-sips-interop-demo.html</url>
 	<modules>		
