--- a/sip-servlets-examples/jslee-sips-interop/jslee-events/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-events/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>jslee-sips-interop-demo-parent</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>jslee-sips-interop-demo-jslee-events-parent</artifactId>
 	<packaging>pom</packaging>
