--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>jslee-sips-interop-demo-jslee-services-parent</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>jslee-sips-interop-demo-jslee-interop-sbb</artifactId>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>jslee-sips-interop-commons</artifactId>
-			<version>1.0</version>
+			<version>1.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
