--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/services-du/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/services-du/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>jslee-sips-interop-demo-jslee-services-parent</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>jslee-sips-interop-demo-jslee-interop-services-DU</artifactId>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>jslee-sips-interop-demo-jslee-interop-sbb</artifactId>
-			<version>1.0</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	
