--- a/sip-servlets-examples/shopping-demo/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo/business/pom.xml
@@ -6,7 +6,7 @@
 		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>shopping-demo-business</artifactId>
-	<packaging>jar</packaging>
+	<packaging>ejb</packaging>
 	<name>Shopping Demo Business</name>
 	<dependencies>
 		<dependency>
