messing up with maven to make the release process work - reverting previous change will try with -DpreparationGoals
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3764 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/shopping-demo/business/pom.xml
+++ b/sip-servlets-examples/shopping-demo/business/pom.xml
@@ -6,7 +6,7 @@
 		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>shopping-demo-business</artifactId>
-	<packaging>ejb</packaging>
+	<packaging>jar</packaging>
 	<name>Shopping Demo Business</name>
 	<dependencies>
 		<dependency>
