--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 		<artifactId>maven-release-plugin</artifactId>
 		<configuration>
 			<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+			<preparationGoals>clean install</preparationGoals>
                        	<tagBase>
                                	https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/
                        	</tagBase>
