[maven-release-plugin] prepare release sip-servlets-bootstrap-0.7
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3766 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/conference-demo/pom.xml
+++ b/sip-servlets-examples/conference-demo/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<!--
 		GWT-Maven example POM without google.webtoolkit.home SET (GWT as deps)
 	-->
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mobicents.servlet.sip.examples</groupId>
 	<artifactId>conference-demo</artifactId>
 	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>mobicents-sip-servlets-conference</name>
 
 	<!--  include pluginRepository and repository for GWT-Maven -->
@@ -150,7 +149,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.7-SNAPSHOT</version>
+			<version>1.1.7</version>
 			<scope>provided</scope>
 		</dependency>
 		
