--- a/sip-servlets-management/pom.xml
+++ b/sip-servlets-management/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>0.7-SNAPSHOT</version>
+		<version>0.7</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
@@ -13,7 +12,7 @@
 	<groupId>org.mobicents.servlet.sip.management</groupId>
 	<artifactId>sip-servlets-management</artifactId>
 	<packaging>war</packaging>
-	<version>0.7-SNAPSHOT</version>
+	<version>0.7</version>
 	<name>sip-servlets-management</name>
 
 	<!--  include pluginRepository and repository for GWT-Maven -->
@@ -130,19 +129,19 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.7-SNAPSHOT</version>
+			<version>1.1.7</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
-			<version>0.7-SNAPSHOT</version>
+			<version>0.7</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-application-router</artifactId>
-			<version>0.7-SNAPSHOT</version>
+			<version>0.7</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
