--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/services-du/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/services-du/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
@@ -8,7 +6,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>jslee-sips-interop-demo-jslee-services-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 	</parent>
 	
 	<artifactId>jslee-sips-interop-demo-jslee-interop-services-DU</artifactId>
@@ -17,7 +15,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>jslee-sips-interop-demo-jslee-interop-sbb</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1</version>
 		</dependency>
 	</dependencies>
 	
@@ -49,8 +47,7 @@
 						</goals>
 						<configuration>
 							<tasks>
-								<copy overwrite="true"
-									file="target/${project.build.finalName}.jar" todir="${env.JBOSS_HOME}/server/default/deploy" />
+								<copy overwrite="true" file="target/${project.build.finalName}.jar" todir="${env.JBOSS_HOME}/server/default/deploy" />
 							</tasks>
 						</configuration>
 					</execution>
@@ -62,8 +59,7 @@
 						</goals>
 						<configuration>
 							<tasks>
-								<delete
-									file="${env.JBOSS_HOME}/server/default/deploy/${project.build.finalName}.jar" />
+								<delete file="${env.JBOSS_HOME}/server/default/deploy/${project.build.finalName}.jar" />
 							</tasks>
 						</configuration>
 					</execution>
