--- a/sip-servlets-test-suite/applications/annotated-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/annotated-servlet/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
-		<version>0.7</version>
+		<version>0.8-SNAPSHOT</version>
 	</parent>
 	<artifactId>annotated-servlet</artifactId>
 	<packaging>war</packaging>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	<name>Annoatated Sip Servlet Example</name>
 	<build>
 		<plugins>
