Upgrading the eclispe classpath to new versions and reporting changes that has been made on the tag
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3828 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -27,7 +27,7 @@
 		<dependency>		
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>jslee-sips-interop-demo-slee-custom-events</artifactId>
-			<version>1.0</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
