--- a/sip-servlets-seam/pom.xml
+++ b/sip-servlets-seam/pom.xml
@@ -49,10 +49,20 @@
 					</warSourceExcludes>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<artifactId>maven-eclipse-plugin</artifactId>
+   				<groupId>org.mobicents.tools</groupId>
+    			<version>1.0.0.BETA2</version>
+				<inherited>false</inherited>
+				<executions />
+				<configuration>
+					<generateProjectsForModules>true</generateProjectsForModules>
+					<resolveTransitiveDependencies>true</resolveTransitiveDependencies>
+					<eclipseProjectName>sip-servlets-seam</eclipseProjectName>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
 
 	<dependencies>
 		<dependency>
@@ -62,148 +72,96 @@
 			<scope>compile</scope>
 		</dependency>
 
-
-
 		<dependency>
-
 			<groupId>org.hibernate</groupId>
-
 			<artifactId>hibernate-annotations</artifactId>
-
 			<version>3.3.0.ga</version>
-
 			<scope>compile</scope>
-
 		</dependency>
 
-
-
 		<dependency>
-
 			<groupId>org.hibernate</groupId>
-
 			<artifactId>hibernate-entitymanager</artifactId>
-
 			<version>3.3.1.ga</version>
-
 			<scope>compile</scope>
-
 		</dependency><!--	 -->
 
 		<dependency>
-
 			<groupId>org.richfaces.ui</groupId>
-
 			<artifactId>richfaces-ui</artifactId>
-
 			<version>3.2.2.SR1</version>
-
 		</dependency>
-		<dependency>
 
+		<dependency>
 			<groupId>com.sun.facelets</groupId>
-
 			<artifactId>jsf-facelets</artifactId>
-
 			<version>1.1.14</version>
-
 		</dependency>
-		<!--
-			<dependency> <groupId>org.drools</groupId>
-
-			<artifactId>drools-compiler</artifactId> <version>4.0.7</version>
-
-			</dependency> <dependency> <groupId>org.drools</groupId>
-
-			<artifactId>drools-core</artifactId> <version>4.0.7</version>
-
-			</dependency> <dependency> <groupId>janino</groupId>
-
-			<artifactId>janino</artifactId> <version>2.5.15</version>
-
-			</dependency> <dependency> <groupId>org.mvel</groupId>
-
-			<artifactId>mvel14</artifactId> <version>1.2.21</version>
-
-			</dependency>
-		-->
-
 
 		<dependency>
-
 			<groupId>org.jboss.seam</groupId>
-
 			<artifactId>jboss-seam</artifactId>
-
 			<version>2.1.0.SP1</version>
 		</dependency>
+
 		<dependency>
-
 			<groupId>org.jboss.seam</groupId>
-
 			<artifactId>jboss-seam-ioc</artifactId>
-
 			<version>2.1.0.SP1</version>
 		</dependency>
+
 		<dependency>
-
 			<groupId>org.jboss.seam</groupId>
-
 			<artifactId>jboss-seam-debug</artifactId>
-
 			<version>2.1.0.SP1</version>
 		</dependency>
+
 		<dependency>
-
 			<groupId>org.jboss.seam</groupId>
-
 			<artifactId>jboss-seam-mail</artifactId>
-
 			<version>2.1.0.SP1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.6</version>
+			<version>1.1.7</version>
 			<scope>provided</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
+		
 		<dependency>
-
 			<groupId>org.jboss.seam</groupId>
-
 			<artifactId>jboss-seam-pdf</artifactId>
-
 			<version>2.1.0.SP1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>ejb3-persistence</artifactId>
 			<version>1.0.2.GA</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
-
 			<groupId>org.jboss.seam</groupId>
-
 			<artifactId>jboss-seam-ui</artifactId>
-
 			<version>2.1.0.SP1</version>
 		</dependency>
+
 		<dependency>
-
 			<groupId>org.jboss.seam</groupId>
-
 			<artifactId>jboss-seam-remoting</artifactId>
-
 			<version>2.1.0.SP1</version>
 		</dependency>
 	</dependencies>
+
 	<profiles>
 		<profile>
 			<id>deploy</id>
