Update demo application with the seamification kit.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3930 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/demo/pom.xml
+++ b/sip-servlets-seam/demo/pom.xml
@@ -103,6 +103,12 @@
 			<artifactId>jboss-seam</artifactId>
 			<version>2.1.0.SP1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.mobicents.seam</groupId>
+			<artifactId>sip-servlets-seam-entrypoint</artifactId>
+			<version>1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
