Issue 470 fixed : Path Extension support added
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3953 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/tck/excludeList.properties
+++ b/sip-servlets-test-suite/tck/excludeList.properties
@@ -26,13 +26,13 @@
 #exclude.class.1=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.Rel100ExceptionTest
 
 # excluded method list
-exclude.method.1=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyTest.testGetSetAddToPath001
+#exclude.method.1=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyTest.testGetSetAddToPath001
 exclude.method.2=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyTest.testGetSetNoCancel001
 
-exclude.method.3=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testGetAddToPath001
-exclude.method.5=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testGetPathURI001
-exclude.method.6=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testGetPathURI101
-exclude.method.7=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testSetAddToPath001
+#exclude.method.3=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testGetAddToPath001
+#exclude.method.5=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testGetPathURI001
+#exclude.method.6=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testGetPathURI101
+#exclude.method.7=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testSetAddToPath001
 exclude.method.8=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testCancel001
 exclude.method.9=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testCancel002
 exclude.method.10=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testCancel101
@@ -45,8 +45,9 @@ exclude.method.10=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranc
 #exclude.method.16=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoPublish001
 #exclude.method.17=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoInfo001
 
+# : Path Header comes back with <> around it like Path: <sip:127.0.0.1:5080> and it is not accepted by the TCK which check against sip:127.0.0.1:5080
 exclude.method.18=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletRequestTest.testPushPath001
-exclude.method.19=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletRequestTest.testPushPath101
+#exclude.method.19=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletRequestTest.testPushPath101
 
 #exclude.method.20=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testCreatePrack001
 #exclude.method.21=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testCreatePrack101
