putting the failing test in hudson in exclude list because it tests for Record Route in REGISTER but Proxy are not allowed to add a Record Route to REGISTER. They should use Path header instead
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3970 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/tck/excludeList.properties
+++ b/sip-servlets-test-suite/tck/excludeList.properties
@@ -99,3 +99,5 @@ exclude.method.34=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServlet
 # - expects sipFactor.createURI(String) to throw IllegalArgumentExcpetion while the javadoc says a parse exception.
 #exclude.method.47=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyTest.testProxyTo106
 # - expects sipFactor.createURI(String) to throw IllegalArgumentExcpetion while the javadoc says a parse exception.
+exclude.method.48=com.bea.sipservlet.tck.agents.spec.MultihomedTest.testMultihomedProxyForRegister
+# : the test check for Record Route in REGISTER, but Proxy can't add Record Route to REGISTER requests
