--- a/sip-servlets-seam/demo/pom.xml
+++ b/sip-servlets-seam/demo/pom.xml
@@ -28,7 +28,9 @@
 		</repository>
 
 	</repositories>
-
+	<properties>
+		<seam.version>2.1.0.CR1</seam.version>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -101,7 +103,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
-			<version>2.1.0.SP1</version>
+			<version>${seam.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -113,19 +115,19 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ioc</artifactId>
-			<version>2.1.0.SP1</version>
+			<version>${seam.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-debug</artifactId>
-			<version>2.1.0.SP1</version>
+			<version>${seam.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-mail</artifactId>
-			<version>2.1.0.SP1</version>
+			<version>${seam.version}</version>
 		</dependency>
 
 		<dependency>
@@ -145,7 +147,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-pdf</artifactId>
-			<version>2.1.0.SP1</version>
+			<version>${seam.version}</version>
 		</dependency>
 
 		<dependency>
@@ -158,13 +160,13 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ui</artifactId>
-			<version>2.1.0.SP1</version>
+			<version>${seam.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-remoting</artifactId>
-			<version>2.1.0.SP1</version>
+			<version>${seam.version}</version>
 		</dependency>
 		
 		<dependency>
