Updating to jsip 1.2.89
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3990 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/demo/.project
+++ b/sip-servlets-seam/demo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>sip-servlets-seam</name>
+  <name>sip-servlets-seam-demo</name>
   <comment/>
   <projects/>
   <buildSpec>
