--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -49,16 +49,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>concurrent</groupId>
-			<artifactId>concurrent</artifactId>
-			<version>${concurrent.version}</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>org.dnsjava</groupId>
 			<artifactId>dnsjava</artifactId>
 			<version>2.0.6</version>
+			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
@@ -81,8 +75,8 @@
 			<artifactId>coyote</artifactId>
 			<version>6.0.14</version>
 			<scope>provided</scope>
-		</dependency>
-
+		</dependency>		
+		
 		<!-- JBoss dependencies -->
 		<dependency>
 			<groupId>jboss</groupId>
@@ -228,7 +222,7 @@
 										<goal> copy-dependencies </goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,concurrent,log4j,commons-logging,dnsjava,stun4j</includeArtifactIds>
+									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,log4j,commons-logging,dnsjava,stun4j</includeArtifactIds>
 					    			<outputDirectory>${CATALINA_HOME}/lib</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
@@ -326,7 +320,7 @@
 										<goal>copy-dependencies</goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j</includeArtifactIds>
+									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,dnsjava,stun4j</includeArtifactIds>
 					    			<outputDirectory>${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
@@ -372,8 +366,55 @@
 										<goal> copy-dependencies </goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,concurrent,dnsjava,stun4j</includeArtifactIds>
+									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,dnsjava,stun4j</includeArtifactIds>
 					    			<outputDirectory>${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer/</outputDirectory>
+		 	            			</configuration>
+		 	          		</execution>
+		 	        	</executions>
+		 	      	</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>		
+			<id>jboss-5</id>			
+			<build>			
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<configuration>
+									<tasks>
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar" />
+										<copy verbose="true" file="docs/jboss5/jboss-log4j.xml" todir="${env.JBOSS_HOME}/server/${node}/conf" />
+										<copy verbose="true" file="docs/mss-sip-stack.properties" todir="${env.JBOSS_HOME}/server/${node}/conf" />
+                                        <copy todir="${env.JBOSS_HOME}/docs/licenses">
+                                            <fileset file="LICENSES/*" />
+                                        </copy>
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+		 	        	<groupId>org.apache.maven.plugins</groupId>
+		 	        	<artifactId>maven-dependency-plugin</artifactId>
+		 	        	<executions>		 	          		
+		 	          		<execution>
+		 	            			<id>copy-to-jboss-lib</id>
+		 	            			<phase>package</phase>
+		 	            			<goals>
+										<goal>copy-dependencies</goal>
+		 	            			</goals>
+		 	            			<configuration>
+									<includeArtifactIds>sip-balancer,jain-sip-api,jain-sip-ri,dnsjava,stun4j</includeArtifactIds>
+					    			<outputDirectory>${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
 		 	        	</executions>
