adding jboss 5 and tomcat jboss 4 maven projects
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4032 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
           <configuration>
-                           	https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/
+          		https://mobicents.googlecode.com/svn/tags/servers/sip-servlets/
           </configuration>
         </plugin>
 				</plugins>
@@ -186,7 +186,9 @@
 		</profile>
 		<profile>			
 			<id>release</id>
-			<modules>				
+			<modules>
+				<module>sip-servlets-tomcat-jboss4</module>	
+				<module>sip-servlets-jboss5</module>			
 				<module>sip-servlets-management</module>
 				<module>jopr-plugin</module>
 				<module>sip-servlets-examples</module>
@@ -195,6 +197,27 @@
 			<properties>
 				 <maven.test.skip>true</maven.test.skip>
 			</properties>
+		</profile>
+		<profile>			
+			<id>tomcat</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>	
+			<modules>				
+				<module>sip-servlets-tomcat-jboss4</module>				
+			</modules>			
+		</profile>
+		<profile>			
+			<id>jboss</id>
+			<modules>				
+				<module>sip-servlets-tomcat-jboss4</module>				
+			</modules>			
+		</profile>
+		<profile>			
+			<id>jboss-5</id>
+			<modules>				
+				<module>sip-servlets-jboss5</module>				
+			</modules>			
 		</profile>
 	</profiles>
 	<!-- repositories -->
