updating scripts and config in clustering
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4064 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
@@ -1,10 +1,10 @@
-#handlers = java.util.logging.ConsoleHandler
+#handlers = java.util.logging.FileHandler
 handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 ############################################################
 # Handler specific properties.
 # Describes specific configuration info for Handlers.
 ############################################################
-.level = SEVERE
+.level = ALL
 
 #java.util.logging.ConsoleHandler.level=ALL
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
